# weak_language

./: .clang-format  CMakeLists.txt  README.md  lexeme.hpp  lexer.hpp  lexer_test.hpp  main.cpp
examples/: nested.wl  to_be_nested.wl
examples/src/: main.wl
examples/src/dir_1/: file_1.wl
examples/src/dir_2/: file_2.wl  pwd_file.wl
include/: common_defs.hpp  crc32.hpp  cut_last_iterator.hpp  format.hpp  grammar.hpp  lexer.hpp  lexer_test.hpp  single_shared_ptr.hpp
include/ast/: ast.hpp
include/error/: common_error.hpp  error.hpp  eval_error.hpp  lexical_error.hpp  parse_error.hpp  semantic_error.hpp
include/eval/: builtins.hpp  eval.hpp
include/eval/implementation/: binary.hpp  unary.hpp
include/expressions/: builtins.hpp  eval.hpp
include/lexer/: lexeme.hpp  lexer.hpp  lexer_builder.hpp  lexical_error.hpp  preprocessor.hpp  token.hpp
include/memory/: pool.hpp
include/optimizer/: optimizer.hpp
include/parser/: ast.hpp  expression.hpp  parser.hpp
include/semantic/: environment.hpp  semantic_analyzer.hpp  storage.hpp  symbol_table.hpp
include/std/: builtins.hpp
include/storage/: crc32.hpp  storage.hpp
include/tests/: ast_test.hpp  eval_tests.hpp  expression_test.hpp  grammar.hpp  lexer_tests.hpp  parser_tests.hpp  semantic_analyzer_tests.hpp  storage_tests.hpp  symbol_table_tests.hpp  test_crc32.hpp  test_eval.hpp  test_format.hpp  test_interpreter.hpp  test_lexer.hpp  test_optimizer.hpp  test_semantic.hpp  test_storage.hpp  test_storage.hpp.autosave  test_utility.hpp
src/: main.cpp
src/ast/: array.cpp  array_subscript_operator.cpp  binary.cpp  block.cpp  float.cpp  for.cpp  function.cpp  function_call.cpp  if.cpp  integer.cpp  lambda.cpp  lambda_call.cpp  number.cpp  root.cpp  string.cpp  symbol.cpp  type_creator.cpp  type_definition.cpp  type_field_operator.cpp  type_object.cpp  unary.cpp  user_type.cpp  while.cpp
src/eval/: builtins.cpp  eval.cpp
src/eval/implementation/: binary.cpp  unary.cpp
src/lexer/: lexer.cpp  lexer_builder.cpp  preprocessor.cpp
src/optimizer/: optimizer.cpp
src/parser/: ast.cpp  parser.cpp
src/semantic/: semantic_analyzer.cpp
src/std/: builtins.cpp
src/std/implementation/: array.cpp  io.cpp  type_traits.cpp
src/storage/: storage.cpp
